# luna

./: .gitignore  CMakeLists.txt  README.md
lib/linux/SDL3/: libSDL3.so.0  libSDL3.so.0.1.7
resources/: config.txt
src/ChessEngine/: CMakeLists.txt  main.cpp
src/ChessEngine/include/: constants.h  engine.h  evaluator.h  search.h  tests.h  time_manager.h  transposition_table.h  unified_uci_interface.h  zobrist.h
src/ChessEngine/src/: engine.cpp  evaluator.cpp  search.cpp  tests.cpp  time_manager.cpp  transposition_table.cpp  unified_uci_interface.cpp  zobrist.cpp
src/ChessRules/: CMakeLists.txt
src/ChessRules/include/: bitboard.h  movegen.h  position.h  rule_interface.h  types.h  variant_position.h  variant_rules.h
src/ChessRules/src/: bitboard.cpp  movegen.cpp  position.cpp  rule_engine.cpp  variant_position.cpp  variant_rules.cpp
src/GameEngine/: CMakeLists.txt  main.cpp
src/GameEngine/chess_game/: CMakeLists.txt  board_coordinate_system.cpp  board_coordinate_system.hpp  constants.h  main_scene.cpp  main_scene.hpp  move_handler.cpp  move_handler.hpp  popup_manager.cpp  popup_manager.hpp  uci_client.cpp  uci_client.hpp
src/GameEngine/graph/: CMakeLists.txt  analytics_node.cpp  analytics_node.hpp  camera_node.cpp  camera_node.hpp  geometry_node.cpp  geometry_node.hpp  node.cpp  node.hpp  node_t.hpp  root_node.cpp  root_node.hpp  scene_state.cpp  scene_state.hpp  sprite_node.cpp  sprite_node.hpp  text_node.cpp  text_node.hpp  texture_node.cpp  texture_node.hpp  transform_node.cpp  transform_node.hpp  ui_button.cpp  ui_button.hpp
src/GameEngine/image/: CMakeLists.txt  image.cpp  image.hpp
src/GameEngine/menus/: game_over_menu.cpp  game_over_menu.hpp  main_menu.cpp  main_menu.hpp  pause_menu.cpp  pause_menu.hpp
src/GameEngine/misc/: boundary_dimensions.txt
src/GameEngine/platform/: CMakeLists.txt  animation.cpp  animation.hpp  audio_component.cpp  audio_component.hpp  audio_engine.cpp  audio_engine.hpp  audio_manager.cpp  audio_manager.hpp  camera.cpp  camera.hpp  collision_component.cpp  collision_component.hpp  collision_manager.cpp  collision_manager.hpp  collision_system.cpp  collision_system.hpp  config.hpp  core.cpp  core.hpp  event.cpp  event.hpp  game_action.hpp  game_manager.cpp  game_manager.hpp  input_interpreter.cpp  input_interpreter.hpp  io_handler.cpp  io_handler.hpp  math.cpp  math.hpp  movement_controller.cpp  movement_controller.hpp  path.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  sdl.h  time_manager.cpp  time_manager.hpp  (+1 more)
src/GameEngine/system/: CMakeLists.txt  config_manager.cpp  config_manager.hpp  file_locator.cpp  file_locator.hpp  preprocessor.h  process_manager.cpp  process_manager.h  save_manager.cpp  save_manager.hpp  serializable.cpp  serializable.hpp  serializer.cpp  serializer.hpp  string_utils.hpp
